mbr page alignment fixed

--- a/Sample1/CSS/mbrstyle.css
+++ b/Sample1/CSS/mbrstyle.css
@@ -274,17 +274,17 @@ input{
 }
 
 .post-area{
+  padding: 20px;
+  width: 88%;
+  margin: 0 auto;
   top: 5px;
   height: 120px;
-  margin-left: 30px;
-  width: 775px;
   margin-bottom: 15px;
   border: 1px solid rgb(110, 110, 110);
   background: white;
 }
 
 .post-text-area{
-  width: 740px;
   height: 65px;
   display: inline-block;
   margin-left: 10px;
@@ -296,11 +296,11 @@ input{
 }
 
 .post-submit{
+  float: right;
+  margin-top: 50px;
   width: 80px;
   height: 30px;
-  display: inline-block;
   background: #000000;
-  margin-left: 680px;
   border-radius: 16px;
   border-color: #808080;
   color: #ffffff;
